src/Client/www/style.css
:root {
    --blue-900: #03045E;
    --blue-700: #0077B6;
    --blue-500: #00B4D8;
    --blue-300: #90E0EF;
    --blue-100: #CAF0F8;
}

* {
    font-family: "Roboto", sans-serif;
}

body {
    margin: 0;
    padding: 0;
    height: 100vh;
    display: grid;
    grid-template-columns: 30rem 2fr;
    grid-template-rows: auto 1fr;
    justify-content: center;
    align-items: stretch;
    background-color: var(--blue-100);
}

.settings {
    align-self: stretch;
    margin: 1rem;
    padding: 1rem;
    display: flex;
    flex-direction: column;
    border-radius: 0.5rem;
    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
    gap: 1rem;
    grid-row: 1 / 3;
    background-color: white;
}

.settings h2 {
    margin: 0;
    padding: 0;
    text-align: center;
}

.round-settings {
    flex: 1;
    display: flex;
    flex-direction: column;
}

.round-settings .ranges-buttons {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 0.5rem;
    padding: 0.5rem;
}

.round-settings .globals {
    margin-block: 0.5rem;
    display: grid;
    grid-template-columns: 1fr 1fr;
    row-gap: 1rem;
    column-gap: 0.5rem;
    align-items: center;
    justify-content: center;
}

.round-settings .globals label {
    font-size: 1rem;
    font-weight: bold;
    margin-left: 1rem;
}

.round-settings .globals input {
    width: 100px;
}

#rmv-range {
    border-color: #DD2222;
    color: #DD2222;
}

#rmv-range:not(:disabled):hover {
    background-color: #DD2222;
    color: white;
}

#rmv-range:not(:disabled):active {
    border-color: red;
    background-color: red;
}

.rate-field {
    display: flex;
    align-items: center;
}

#rate.error {
    border-color: red;
}

#shutdown {
    color: #B22222;
    border-color: #B22222;
}

#shutdown:hover {
    color: white;
    background-color: #B22222;
}

#shutdown:active {
    background-color: red;
    border-color: red;
}

.settings h3 {
    padding: 0 0 0.5rem 0;
    margin: 0;
}

.connection-success {
    color: #00FA9A;
}

.server-settings .messages {
    height: 1rem;
    color: #B22222;
    font-size: 0.8rem;
    margin-left: 4rem;
}

.connect-field  {
    padding: 0.5rem 4rem;
    display: grid;
    grid-template-columns: 1fr auto;
}

.connect-field input {
    border-radius: 0.5rem 0 0 0.5rem;
    border: 3px solid var(--blue-500);
    border-right: none;
    font-size: 1rem;
    padding-left: 0.5rem;
}

.connect-field button {
    border: none;
    background-color: var(--blue-500);
    color: white;
    border-radius: 0 0.5rem 0.5rem 0;
}

.range h4 {
    margin: 0;
    padding: 0;
}

.range .error {
    font-size: 0.8rem;
    font-weight: normal;
    color: #B22222;
    margin-left: 1rem;
    font-style: italic;
}

.range > div {
    display: grid;
    grid-template-columns: repeat(3, auto 1fr);
    align-items: center;
    justify-content: center;
    gap: 0.5rem;
    margin: 0.5rem;
}

.round-settings input {
    min-width: 0;
    padding: 0.25rem;
    border: 2px solid #444;
    border-radius: 0.3rem;
    font-size: 1rem;
}

input:is(:focus, :focus-visible, :focus-within) {
    outline: none;
}

.range input:nth-of-type(1) {
    border-color: var(--blue-700);
}

.range input:nth-of-type(2) {
    border-color: #DD2222;
}

.ranges-container {
    flex: 1;
}

.feedback-container {
    border-radius: 0.5rem;
    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
    margin: 1rem 4rem 4rem 3rem;
    padding: 1rem;
    background-color: white;
    display: flex;
    flex-direction: column;
}

.feedback-container .graph-container {
    flex: 1;
    display: flex;
    align-items: center;
}

.feedback-container .header {
    display: flex;
    align-items: center;
}

.round-status {
    font-size: 1.4em;
    font-weight: bold;
    margin: 1rem;
    flex: 1;
}

#round-status { 
    font-weight: normal; 
    margin-left: 0.5rem;
}

#round-status > span {
    color: #444;
    margin-left: 2rem;
}

#round-status.unset { color: #888; }
#round-status.ready { color: var(--blue-900); }
#round-status.running { color: var(--blue-500); }
#round-status.finished { color: #00FF8A; }
#round-status:is(.mshutdown, .tshutdown) { color: #B22222; }

h1 {
    text-align: center;
    color: var(--blue-700);
    grid-column: 2;
}

button {
    font-size: 1rem;
    padding: 0.5rem;
    background-color: white;
    border-radius: 0.5rem;
    border: 3px solid var(--blue-700);
    color: var(--blue-700);
    font-weight: bold;
}

button:not(:disabled):hover {
    background-color: var(--blue-700);
    color: white;
}

button:not(:disabled):active {
    background-color: var(--blue-900);
    border-color: var(--blue-900);
}

button:disabled {
    border-color: #777;
    color: #777;
}

.hide {
    display: none;
}

